fix(v2): adjust proper padding top of doc page on mobiles

--- a/packages/docusaurus-theme-classic/src/theme/DocPage/styles.module.css
+++ b/packages/docusaurus-theme-classic/src/theme/DocPage/styles.module.css
@@ -27,6 +27,6 @@
   }
 
   .docSidebarContainer {
-    display: none;
+    margin-top: 0;
   }
 }
